<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/frame" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="146dp"
        android:layout_height="103dp"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="35dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/C12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/partsunny" />

    </LinearLayout>


    <TextView
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:paddingTop="35dp"
        android:paddingRight="30dp"
        android:text="@string/paris"
        android:textSize="20dp" />

    <ImageView
        android:src="@drawable/cloudy"
        android:layout_centerInParent="true"
        android:layout_width="100dp"
        android:layout_height="100dp" />
</RelativeLayout>